src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>First_Responded_Date__c</fullName>
        <description>This field will auto populate with the System time for that moment, whenever a particular campaign, which this Lead is a part of, has been responded to.</description>
        <label>First Responded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>text(Lead__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Email_1__c</fullName>
        <label>Partner Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Email_2__c</fullName>
        <label>Partner Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Email_3__c</fullName>
        <label>Partner Email 3</label>
        <type>Email</type>
    </fields>
</CustomObject>